# bbangee

./: DOOSAN_ROBOT_GUIDE.md  README.md  env  start_all.sh  start_hardware.sh  start_ros2_nodes.sh  start_web.sh
bbangee/: devices.py  main.py  ros2
bbangee/backend/app/: main.py
bbangee/backend/app/routers/: access.py  armband.py  devices.py  gripper.py  people.py  pistol_grip.py  robot.py  ros2.py  scenario.py  voice.py
bbangee/backend/app/services/: __init__.py  audio_service.py  config.py  device_control.py  robot_motions.py  ros2_bridge.py  tts_service.py
bbangee/backend/tts/: TTS.py  classify_real.py
bbangee/frontend/: package.json  vite.config.ts
bbangee/frontend/src/: index.css
bbangee/frontend/src/api/: access.ts  client.ts  voice.ts
bbangee/frontend/src/components/: ArmbandPanel.tsx  CameraPanel.tsx  CollisionPanel.tsx  GripperControl.tsx  PersonnelPanel.tsx  RobotPanel.tsx  ScenarioPanel.tsx  ServoControl.tsx  VoicePanel.tsx
bbangee/frontend/src/pages/: AdminPage.tsx  MainPage.tsx
bbangee/ros2/: package.xml  setup.cfg  setup.py
bbangee/ros2/ros2_web_bridge/: bridge_node.py  robot_controller.py
bbangee/tests/: run_test.sh  test_head_laser.py  test_scenario.py
collision_recovery/: config.py  main.py  motion.py  recovery.py
gripper_rviz_sync/: README.md  test_gripper.py
rokey_packages/calibration/: T_gripper2camera.npy  T_gripper2camera_backup.npy  T_gripper2camera_old.npy  data_recording_ros2.py  frames_2025-12-18_17.19.31.gv  handeye_calibration.py  verify_calibration.py  verify_with_imu.py
rokey_packages/calibration/data/: calibrate_data.json
rokey_packages/camera_utils/: package.xml  setup.py
rokey_packages/camera_utils/camera_utils/: __init__.py  image_flip_node.py
rokey_packages/camera_utils/launch/: image_flip.launch.py
rokey_packages/face_tracking/docs/: FaceTracking_Presentation.pptx  PRESENTATION.md  SECTION_01_PROJECT_INTRO.md  SECTION_02_PROBLEM_DEFINITION.md  SECTION_03_DEV_HISTORY.md  SECTION_04_SYSTEM_ARCHITECTURE.md  SECTION_05_TECH_COMPARISON.md  SECTION_06_CORE_ALGORITHMS.md  SECTION_07_RESULTS.md  SECTION_08_FUTURE_PLANS.md  TEAM_PRESENTATION.md  create_ppt.py
rokey_packages/face_tracking/docs/섹션1/: ai_studio_code (1).html  ai_studio_code (2).html  ai_studio_code (3).html  ai_studio_code (4).html  ai_studio_code (5).html  ai_studio_code (6).html  ai_studio_code.html
rokey_packages/face_tracking/docs/섹션2/: ai_studio_code (1).html  ai_studio_code (2).html  ai_studio_code (3).html  ai_studio_code.html
rokey_packages/face_tracking/face_tracking/control/: joint_tracking_node.py
rokey_packages/face_tracking/face_tracking/detection/: face_detection_node.py  face_detection_node_backup_20241217.py  face_detection_node_backup_v2_20241217.py  (+1 more)
rokey_packages/gripper_camera_description/: CMakeLists.txt  package.xml
rokey_packages/gripper_camera_description/config/: display.rviz
rokey_packages/gripper_camera_description/launch/: dsr_bringup2_with_gripper.launch.py  view_robot.launch.py
rokey_packages/gripper_camera_description/urdf/: gripper_camera_assembly.urdf.xacro  m0609_gripper_camera.urdf.xacro
rokey_packages/gripper_control/: CMakeLists.txt  package.xml
rokey_packages/gripper_control/config/: gripper_config.yaml
rokey_packages/gripper_control/gripper_control/: __init__.py
rokey_packages/ros2_web_bridge/: package.xml  setup.py
rokey_packages/ros2_web_bridge/ros2_web_bridge/: __init__.py  bridge_node.py  camera_streamer.py  check_start_position.py  collision_recovery_node.py  pistol_grip_node.py  robot_controller.py  status_publisher.py
rokey_packages/sam3_grip_detection/: package.xml  setup.cfg  setup.py
rokey_packages/sam3_grip_detection/config/: camera_calibration.yaml  params.yaml
rokey_packages/sam3_grip_detection/launch/: doosan_grip.launch.py  full_system.launch.py  go_pick.launch.py  grip_detection.launch.py
rokey_packages/sam3_grip_detection/rviz/: grip_detection.rviz
rokey_packages/sam3_grip_detection/sam3_grip_detection/: __init__.py  detection_viewer.py  go_pick.py  grip_pose_calculator.py  reddot_grip.py  sam3_grip_node.py  test_publisher.py  tracking_viewer.py
rokey_packages/sam3_grip_detection/sam3_grip_detection/utils/: __init__.py  depth_to_pointcloud.py  grasp_utils.py  sam3_wrapper.py
rokey_packages/sam3_grip_detection/test/: test_sam3_detection.py
rokey_packages/voice_auth/: package.xml  setup.cfg  setup.py  test_voice_auth.py
rokey_packages/voice_auth/config/: voice_auth.yaml
rokey_packages/voice_auth/launch/: voice_auth.launch.py
rokey_packages/voice_auth/voice_auth/: __init__.py  tts_engine.py  voice_auth_node.py
rokey_packages/voice_auth_msgs/: CMakeLists.txt  package.xml
rokey_packages/voice_auth_msgs/msg/: AuthStatus.msg
rokey_packages/voice_auth_msgs/srv/: RequestAuth.srv
(+9 files in other folders)
