<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_camera_description</name>
  <version>1.0.0</version>
  <description>
    URDF description for OnRobot RG2 gripper and Intel RealSense D435i camera
    mounted on Doosan m0609 robot.
  </description>
  <maintainer email="rokey@todo.todo">rokey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_description</depend>
  <depend>dsr_description2</depend>
  <depend>dsr_bringup2</depend>
  <depend>dsr_controller2</depend>
  <depend>controller_manager</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
